--- a/lovelace/decluttering_templates/sys_monitoring_stack.yaml
+++ b/lovelace/decluttering_templates/sys_monitoring_stack.yaml
@@ -82,6 +82,6 @@ sys_monitoring_stack:
           - 'sensor.[[system]]_ram_used'
           - 'sensor.[[system]]_free'
           - 'sensor.[[system]]_used'
-          - 'sensor.[[system]]_speedtest_download'
-          - 'sensor.[[system]]_speedtest_upload'
-          - 'sensor.[[system]]_speedtest_ping'
+          - 'sensor.speedtest_download'
+          - 'sensor.speedtest_upload'
+          - 'sensor.speedtest_ping'
