--- a/lovelace/views/00_home.yaml
+++ b/lovelace/views/00_home.yaml
@@ -53,7 +53,7 @@ cards:
           ## SCENES / AUT ##
           ##################
 
-          - !include 00_home/escenes.yaml
+          # - !include 00_home/escenes.yaml
 
           ######################
           ## ACCIONS RÀPIDES  ##
