--- a/lovelace/views/00_home/exterior.yaml
+++ b/lovelace/views/00_home/exterior.yaml
@@ -90,3 +90,20 @@ cards:
           #     - name: Bústia
           #     - entity: binary_sensor.motion_mailbox
           #     - icon: "mdi:mailbox"
+
+      - type: custom:mini-graph-card
+        entities: 
+          - entity: sensor.exterior_temperature
+            name: Temperatura
+            color: "#ff9933"
+          - entity: sensor.exterior_humidity
+            name: Humitat
+            y_axis: secondary
+            show_fill: false
+        height: 75
+        animate: false
+        line_width: 3
+        show:
+          legend: false
+          name: false
+          icon: false
