--- a/lovelace/decluttering_templates/nest_buttons/nest_button.yaml
+++ b/lovelace/decluttering_templates/nest_buttons/nest_button.yaml
@@ -33,7 +33,8 @@ nest_button:
       }
       #img-cell {
         background-color: {% if is_state('[[entity]]', '[[state_enabled]]') %}[[background_on]]{% else %}[[background_off]]{% endif %};
-        border-radius: 50px;
+        border-radius: 10px;
+        border: 2px solid {% if is_state('[[entity]]', '[[state_enabled]]') %}[[background_on]]{% else %}var(--secondary-background-color){% endif %};;
         height: 50px !important;
         width: 50px !important;
       }
@@ -52,7 +53,8 @@ nest_button:
     - show_state: true
     - show_name: false
     - show_last_changed: true
-    - background_off: "#F5F5F5"
+    # - background_off: "#F5F5F5"
+    - background_off: "var(--primary-background-color)"
     - background_on: "#fbd229"
     - title-font-size: "1.0rem"
     - color: rgb(251, 210, 41)
