--- a/lovelace/views/00_home/room_dormitori.yaml
+++ b/lovelace/views/00_home/room_dormitori.yaml
@@ -3,7 +3,7 @@ cards:
   - template: title_h2
     type: "custom:decluttering-card"
     variables:
-      - title: Despatx
+      - title: Dormitori
 
   - type: "custom:vertical-stack-in-card"
     style: |
@@ -27,53 +27,49 @@ cards:
           - template: nest_button_light
             type: "custom:decluttering-card"
             variables:
-              - name: Peu
-              - entity: light.llum_despatx_peu
-              - icon: "mdi:floor-lamp"
-          - template: nest_button_light
-            type: "custom:decluttering-card"
-            variables:
-              - name: Taula
-              - entity: light.llum_despatx_taula
-              - icon: "mdi:lightbulb"
-          - template: nest_button_light
-            type: "custom:decluttering-card"
-            variables:
               - name: Radiador
-              - entity: switch.calefaccio_despatx
+              - entity: switch.calefaccio_dormitori
               - icon: "mdi:radiator"
           - template: nest_button_light
             type: "custom:decluttering-card"
             variables:
               - name: Calefacció
-              - entity: climate.despatx
+              - entity: climate.dormitori
               - icon: "mdi:home-thermometer-outline"
               - state_enabled: "heat"
               - tap_action:
                   action: more-info
+          - template: nest_button_light
+            type: "custom:decluttering-card"
+            variables:
+              - name: Purificador
+              - entity: fan.xiaomi_miio_device
+              - icon: "mdi:air-purifier"
+          - template: nest_button_binary_sensor
+            type: "custom:decluttering-card"
+            variables:
+              - name: Finestra
+              - entity: binary_sensor.window_dormitori
+              - icon: "mdi:window-closed"
           - template: nest_button_media_player
             type: "custom:decluttering-card"
             variables:
-              - name: Nest Mini
-              - entity: media_player.cuina
-              - icon: "mdi:google-home"
-
-
-      - type: entities
-        show_header_toggle: false
-        style: |
-          ha-card {
-            margin-right: 5px;
-          }
-        entities:
-          - input_select.escena_oficina
+              - name: Chromecast
+              - entity: media_player.el_lado_oscuro
+              - icon: "mdi:cast"
+          # - template: nest_button_media_player
+          #   type: "custom:decluttering-card"
+          #   variables:
+          #     - name: Tele
+          #     - entity: media_player.tele
+          #     - icon: "mdi:television"
 
       - type: custom:mini-graph-card
         entities: 
-          - entity: sensor.sensor_despatx_temperature
+          - entity: sensor.dormitori_temperature
             name: Temperatura
             color: "#ff9933"
-          - entity: sensor.sensor_despatx_humidity
+          - entity: sensor.dormitori_humidity
             name: Humitat
             y_axis: secondary
             show_fill: false
