--- a/lovelace/views/00_home/room_menjador.yaml
+++ b/lovelace/views/00_home/room_menjador.yaml
@@ -42,21 +42,6 @@ cards:
               - name: Tauleta
               - entity: light.mesita
               - icon: "mdi:lightbulb"
-          - template: nest_button_light
-            type: "custom:decluttering-card"
-            variables:
-              - name: Radiador
-              - entity: switch.calefaccio_menjador
-              - icon: "mdi:radiator"
-          - template: nest_button_light
-            type: "custom:decluttering-card"
-            variables:
-              - name: Calefacció
-              - entity: climate.menjador
-              - icon: "mdi:home-thermometer-outline"
-              - state_enabled: "heat"
-              - tap_action:
-                  action: more-info
           - template: nest_button_binary_sensor
             type: "custom:decluttering-card"
             variables:
@@ -105,6 +90,65 @@ cards:
                   action: more-info
 
 
+      - type: custom:layout-card
+        layout: horizontal
+        min_columns: 5
+        max_columns: 5
+        column_width: 100px
+        justify_content: left
+        style: |
+          ha-card {
+            padding: 10px;
+          }
+        cards:
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - entity: sensor.menjador_temperature
+              - icon: "mdi:thermometer"
+              - show_name: false
+              - show_state: true 
+              - show_last_changed: false
+              - color: "#FF5733"
+              - entity: "[[entity]]"
+              - icon: "[[icon]]"
+              - tap_action:
+                  action: more-info
+              - background_on: "#fbd229"
+              - state_enabled: "[[state_enabled]]"
+
+          - template: nest_button
+            type: "custom:decluttering-card"
+            variables:
+              - entity: sensor.menjador_humidity
+              - icon: "mdi:water-percent"
+              - show_name: false
+              - show_state: true 
+              - show_last_changed: false
+              - color: "#339FFF"
+              - entity: "[[entity]]"
+              - icon: "[[icon]]"
+              - tap_action:
+                  action: more-info
+              - background_on: "#fbd229"
+              - state_enabled: "[[state_enabled]]"
+
+          - template: nest_button_light
+            type: "custom:decluttering-card"
+            variables:
+              - name: Radiador
+              - entity: switch.calefaccio_menjador
+              - icon: "mdi:radiator"
+          - template: nest_button_light
+            type: "custom:decluttering-card"
+            variables:
+              - name: Calefacció
+              - entity: climate.menjador
+              - icon: "mdi:home-thermometer-outline"
+              - state_enabled: "heat"
+              - tap_action:
+                  action: more-info
+
       # - type: markdown
       #   content: |
       #     Calefacció engegada
@@ -126,19 +170,19 @@ cards:
       #   entities:
       #     - entity: input_select.escena_menjador
 
-      - type: custom:mini-graph-card
-        entities: 
-          - entity: sensor.menjador_temperature
-            name: Temperatura
-            color: "#ff9933"
-          - entity: sensor.menjador_humidity
-            name: Humitat
-            y_axis: secondary
-            show_fill: false
-        height: 75
-        animate: false
-        line_width: 3
-        show:
-          legend: false
-          name: false
-          icon: false
+      # - type: custom:mini-graph-card
+      #   entities: 
+      #     - entity: sensor.menjador_temperature
+      #       name: Temperatura
+      #       color: "#ff9933"
+      #     - entity: sensor.menjador_humidity
+      #       name: Humitat
+      #       y_axis: secondary
+      #       show_fill: false
+      #   height: 75
+      #   animate: false
+      #   line_width: 3
+      #   show:
+      #     legend: false
+      #     name: false
+      #     icon: false
