--- a/lovelace/views/00_home/room_menjador.yaml
+++ b/lovelace/views/00_home/room_menjador.yaml
@@ -139,7 +139,7 @@ cards:
               - name: Radiador
               - entity: switch.calefaccio_menjador
               - icon: "mdi:radiator"
-          - template: nest_button_light
+          - template: nest_button_clima
             type: "custom:decluttering-card"
             variables:
               - name: Calefacció
