--- a/lovelace/views/00_home/room_despatx.yaml
+++ b/lovelace/views/00_home/room_despatx.yaml
@@ -103,7 +103,7 @@ cards:
               - name: Radiador
               - entity: switch.calefaccio_despatx
               - icon: "mdi:radiator"
-          - template: nest_button_light
+          - template: nest_button_clima
             type: "custom:decluttering-card"
             variables:
               - name: Calefacció
